# archimate-mcp-server

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  main.py  pyproject.toml  sample-output.xml  wiki.md
.codex/environments/: environment.toml
.github/workflows/: ci.yml
archimate-modeler/: SKILL.md
skills/archimate-modeler/: SKILL.md
skills/archimate-modeler/agents/: openai.yaml
skills/archimate-modeler/references/: archimate-rules.md  example-models.md
src/archimate_mcp/: __init__.py  builders.py  cli.py  config.py  exporter.py  grid.py  lanes.py  layout.py  llm.py  models.py  patch.py  ports.py  server.py  validation.py  web_agent.py  webapp.py
src/archimate_mcp/examples/: ebanking_model.json  sample_model.json
src/archimate_mcp/web/: app.js  index.html  styles.css
tests/: test_agent_workflow.py  test_exporter.py  test_grid_ordering.py  test_layout_routing.py  test_llm.py  test_patch_flow.py  test_ports_ordering.py  test_validation.py  test_validation_regressions.py  test_view_validation_regressions.py  test_web_agent.py  test_webapp.py  test_workflow_regressions.py
